Address some code review comments.